# rtnn

./: .gitignore  LICENSE  README.md
SDK/: CMakeLists.txt  INSTALL-WIN.txt  README.md  sampleConfig.h.in  stats.sh
SDK/CMake/: ConfigCompilerFlags.cmake  FindCUDA.cmake  FindOpenEXR.cmake  FindZlibStatic.cmake  Macros.cmake
SDK/CMake/FindCUDA/: run_nvcc.cmake
SDK/cuda/: BufferView.h  GeometryData.h  Light.h  LocalGeometry.h  MaterialData.h  helpers.h  random.h  sphere.cu  util.h  whitted.cu  whitted.h  whitted_cuda.h
SDK/data/Hair/: woman.gltf
SDK/data/Textures/: README  circleSquare_rg_half.exr  circleSquare_rgb_float.exr  circleSquare_rgba_half.exr
SDK/example01_helloOptix/: CMakeLists.txt  main.cpp
SDK/fastrnn/: CMakeLists.txt  Exception_modified.h  cuda_buffer.hpp  cuda_timer.hpp  cuda_types.hpp  main.cpp  radius_search.cpp  radius_search.cu  radius_search.hpp  sutil_modified.h  utils.hpp  vec_math.hpp
SDK/fastrnn/tinyobjloader/: tiny_obj_loader.h
SDK/lib/optixPaging/: CMakeLists.txt
SDK/mylib/: Makefile  mylib.cpp
SDK/optixBenchmarking/: CMakeLists.txt  aabb.cu  camera-knn-countIS.cu  func.h  geometry-knn-calcDistIS.cu  geometry-knn-countIS.cu  geometry-knn-emptyIS.cu  geometry-knn-topKQIS.cu  geometry-radius-aabbTest.cu  geometry-radius-approx.cu  geometry-radius-retOnLimit.cu  geometry-radius-sphereTest.cu  geometry.cu  helper_mortonCode.h  main.cpp  optix.cpp  optixRangeSearch.h  search.cpp  sort.cpp  state.h  thrust_helper.cu  util.cpp
SDK/optixCallablePrograms/: CMakeLists.txt  optixCallablePrograms.cpp  optixCallablePrograms.cu  optixCallablePrograms.h
SDK/optixCurves/: CMakeLists.txt  optixCurves.cpp  optixCurves.cu  optixCurves.h
SDK/optixCutouts/: CMakeLists.txt  optixCutouts.cpp  optixCutouts.cu  optixCutouts.h
SDK/optixDemandTexture/: CMakeLists.txt  CheckerBoardImage.cpp  CheckerBoardImage.h  DemandTexture.cpp  DemandTexture.h  DemandTextureManager.cpp  DemandTextureManager.h  ImageReader.h  optixDemandTexture.cpp  optixDemandTexture.cu  optixDemandTexture.h
SDK/optixDenoiser/: CMakeLists.txt  OptiXDenoiser.h  optixDenoiser.cpp
SDK/optixDynamicMaterials/: CMakeLists.txt  optixDynamicMaterials.cpp  optixDynamicMaterials.cu  optixDynamicMaterials.h
SDK/optixHair/: CMakeLists.txt  Hair.cpp  Hair.h  Head.cpp  Head.h  ProgramGroups.cpp  ProgramGroups.h  README.TXT  Renderers.cpp  Renderers.h  Util.h  optixHair.cpp  optixHair.cu  optixHair.h
SDK/optixHello/: CMakeLists.txt  draw_solid_color.cu  optixHello.cpp
SDK/optixMeshViewer/: CMakeLists.txt  optixMeshViewer.cpp
SDK/optixMultiGPU/: CMakeLists.txt  optixMultiGPU.cpp  optixMultiGPU.cu  optixMultiGPU.h  optixMultiGPU_kernels.cu
SDK/optixNDRangeSearch/: CMakeLists.txt  camera.cu  geometry.cu  optixNDRangeSearch.cpp  optixNDRangeSearch.h  random.h
SDK/optixNVLink/: CMakeLists.txt  nvml_configure.h.in  optixNVLink.cpp  optixNVLink.cu  optixNVLink.h  optixNVLink_kernels.cu
SDK/optixPathTracer/: CMakeLists.txt  optixPathTracer.cpp  optixPathTracer.cu  optixPathTracer.h
SDK/optixRangeSearch/: CMakeLists.txt  aabb.cu  camera.cu  check.cpp  func.h  geometry.cu  grid.cu  grid.h  helper_linearIndex.h  helper_mortonCode.h  helpers.h  main.cpp  optix.cpp  optixRangeSearch.cpp  optixRangeSearch.cu  optixRangeSearch.h  optixWhitted.cpp  search.cpp  shading.cu  sort.cpp  sort.cu  state.h  thrust_helper.cu  util.cpp
SDK/optixRaycasting/: CMakeLists.txt  optixRaycasting.cpp  optixRaycasting.cu  optixRaycasting.h  optixRaycastingKernels.cu  optixRaycastingKernels.h
SDK/optixSimpleMotionBlur/: CMakeLists.txt  optixSimpleMotionBlur.cpp  optixSimpleMotionBlur.cu  optixSimpleMotionBlur.h
SDK/optixSphere/: CMakeLists.txt  optixSphere.h
SDK/optixTriangle/: CMakeLists.txt  optixTriangle.cpp  optixTriangle.cu
SDK/optixWhitted/: CMakeLists.txt  geometry.cu  optixWhitted.cpp
SDK/optixWhittedRS/: CMakeLists.txt  camera.cu  geometry.cu  optixWhitted.cpp  optixWhitted.h  shading.cu
SDK/support/: CMakeLists.txt
SDK/support/imgui/: CMakeLists.txt  imgui_demo.cpp
SDK/sutil/: Aabb.h  CMakeLists.txt  CUDAOutputBuffer.h  Camera.cpp  Camera.h  Exception.h  GLDisplay.cpp  GLDisplay.h  IDFactory.cpp  IDFactory.h  Matrix.h  PPMLoader.cpp  PPMLoader.h  Quaternion.h  Record.h  Scene.cpp  Scene.h  Timing.cpp  Timing.h  Trackball.cpp  Trackball.h  WorkDistribution.h  sutil.cpp  sutilapi.h
src/: CMakeLists.txt  README.md  sampleConfig.h.in  samplepc.txt
src/CMake/: CompilerInfo.cmake  FindDX.cmake
src/data/Duck/: DuckMask.ppm
src/data/Hair/: README.TXT
src/data/Textures/: circleSquare_r_half.exr  circleSquare_rgb_half.exr
src/memstatlib/: Makefile  README.md
src/mylib/: Makefile
src/optixNSearch/: CMakeLists.txt  aabb.cu  camera.cu  check.cpp  func.h  geometry.cu  grid.cu  helper_mortonCode.h  helpers.h  main.cpp  optix.cpp  optixNSearch.h  search.cpp  sort.cpp  state.h  thrust_helper.cu  util.cpp
src/optixRangeSearch/: camera.cu  helper_linearIndex.h  optix.cpp  sort.cpp  state.h
src/sutil/: Exception_orig.h  Timing.h  sutil.cpp  sutil.h  sutil_orig.cpp
